Add Contact link to navigation in header

--- a/header.html
+++ b/header.html
@@ -10,3 +10,7 @@
     <nav>
                     <a href="frontend.php">Home</a>
 <a href="pageorder.php">Order</a>
+<a href="pagecontact.php">Contact</a>
+ </nav>
+            </header>
+        </body>
