--- a/footer.html
+++ b/footer.html
@@ -2,5 +2,8 @@
 <html lang="english">
     <head>
         <meta charset="HTF-8">
-        <link  type="text/css" rel="stylesheet" href="mystyle.css"/>
+               <link  type="text/css" rel="stylesheet" href="mystyle.css"/>
+        <title>Berry & Bloom </title>
+        
+</head>
     
